--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meli+ UX Challenge - Mercado Livre</title>
-    <meta http-equiv="refresh" content="0; url=./app-web/" />
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -13,36 +12,30 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #3483fa 0%, #ffe600 100%);
         }
-        .redirect-message {
+        .container {
             text-align: center;
+            color: white;
             padding: 2rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            background: rgba(0,0,0,0.2);
+            border-radius: 16px;
+            backdrop-filter: blur(10px);
         }
-        .spinner {
-            width: 40px;
-            height: 40px;
-            border: 4px solid #e6e6e6;
-            border-top: 4px solid #3483fa;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 0 auto 1rem;
+        h1 {
+            margin-top: 0;
+            font-size: 2.5rem;
         }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        p {
+            font-size: 1.2rem;
         }
     </style>
 </head>
 <body>
-    <div class="redirect-message">
-        <div class="spinner"></div>
-        <h1>Redirecionando...</h1>
-        <p>Carregando o Meli+ UX Challenge</p>
-        <p><a href="./app-web/">Clique aqui se o redirecionamento automático não funcionar</a></p>
+    <div class="container">
+        <h1>Meli+ UX Challenge</h1>
+        <p>Carregando aplicação Next.js...</p>
+        <p>Este site está estruturado com o app em /app-web</p>
     </div>
 </body>
 </html>
